ISSUE-876 Fixed array types to oneof for js support (#880)